--- a/online-zoo/assets/styles/components/slider.scss
+++ b/online-zoo/assets/styles/components/slider.scss
@@ -6,7 +6,7 @@
         width: 940px;
         margin: 0 auto;
     }
-    @media(max-width: 1230px) {
+    @media(max-width: 999px) {
         width: 600px;
         margin: 0 auto;
     }
@@ -36,7 +36,7 @@
         left: calc(50% - 147.5px);
         width: 295px;
     }
-    @media(max-width: 1230px) {
+    @media(max-width: 999px) {
         top: 405px;
         left: 223px;
         width: 154px;
@@ -52,7 +52,7 @@
     overflow: hidden;
     padding: 20px;
     margin: -20px;
-    @media(max-width: 1230px) {
+    @media(max-width: 999px) {
         width: 640px;
     }
     @media(max-width: 639px) {
@@ -84,16 +84,17 @@
         border: solid 1px $main-color-two;
         border-radius: 5px;
         transition: all 1s ease;
+        z-index: inherit;
         @media(max-width: 1599px) {
             width: 294px;
             height: 354px;
         }
-        @media(max-width: 1230px) {
+        @media(max-width: 999px) {
             width: 285px;
             height: 332px;
         }
         .slider__card-image {
-            width: 366px;
+            width: 100%;
             height: 366px;
             border-radius: 5px;
             overflow: hidden;
@@ -102,7 +103,7 @@
                 width: 294px;
                 height: 294px;
             }
-            @media(max-width: 1230px) {
+            @media(max-width: 999px) {
                 width: 285px;
                 height: 285px;
             }
@@ -120,7 +121,7 @@
             @media(max-width: 1599px) {
                 width: 264px;
             }
-            @media(max-width: 1230px) {
+            @media(max-width: 999px) {
                 align-items: center;
                 margin-bottom: 8px;
             }
@@ -129,14 +130,13 @@
             display: flex;
             flex-direction: column;
             .slider__card-name {
-                margin-left: 16px;
                 font-weight: 500;
                 font-size: 16px;
                 line-height: 20px;
                 text-transform: uppercase;
                 color: #000000;
                 transition: all 1s ease;
-                @media(max-width: 1230px) {
+                @media(max-width: 999px) {
                     font-size: 12.4695px;
                     line-height: 14px;
                     align-items: center;
@@ -144,14 +144,13 @@
                 }
             }
             .slider__card-location {
-                margin-left: 16px;
                 margin-bottom: 14px;
                 font-weight: 300;
                 font-size: 15px;
                 line-height: 16px;
                 color: #000000;
                 transition: all 1s ease;
-                @media(max-width: 1230px) {
+                @media(max-width: 999px) {
                     font-size: 11.6901px;
                     margin-bottom: 0px;
                     line-height: 14px;
@@ -163,7 +162,6 @@
         .slider__card-banana {
             width: 33px;
             height: 37px;
-            margin-right: 12px;
             background: url("../../assets/icons/banana-bamboo_icon.svg") no-repeat center center;
             @media(max-width: 999px) {
                 width: 25.72px;
@@ -175,7 +173,6 @@
         .slider__card-meet {
             width: 48px;
             height: 38px;
-            margin-right: 8px;
             background: url("../../assets/icons/meet-fish_icon.svg") no-repeat center center;
             @media(max-width: 999px) {
                 width: 37.41px;
@@ -185,6 +182,7 @@
             }
         }
         &:hover {
+            cursor: pointer;
             .slider__card-description {
                 background-color: rgba(0, 0, 0, 0.7);
                 transform: translateY(-50px);
