--- a/online-zoo/assets/styles/components/testimonials-slider.scss
+++ b/online-zoo/assets/styles/components/testimonials-slider.scss
@@ -1,7 +1,12 @@
 .testimonials__slider {
     height: 420px;
-    @media(max-width: 640px) {
+    @media(max-width: 1599px) {
+        width: 940px;
+        margin: 0 auto;
+    }
+    @media(max-width: 999px) {
         height: 357px;
+        width: 100%;
     }
 }
 .testimonials__cards {
@@ -9,7 +14,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 30px; 
     margin-bottom: 15px;
-    @media(max-width: 640px) {
+    @media(max-width: 999px) {
         grid-template-columns: 1fr;
         grid-row-gap: 15px; 
     }
@@ -18,7 +23,7 @@
     height: 391px;
     overflow: hidden;
     margin-bottom: 15px;
-    @media(max-width: 640px) {
+    @media(max-width: 999px) {
         height: 357px;
     }
 }
@@ -31,10 +36,10 @@
     border-radius: 20px;
     overflow: hidden;
     z-index: 10;
-    @media(max-width: 1000px) {
+    @media(max-width: 1599px) {
         width: 290px;
     }
-    @media(max-width: 640px) {
+    @media(max-width: 999px) {
         height: 105px;
         width: calc(100% - 4px);
     }
@@ -52,10 +57,10 @@
     border-radius: 20px;
     z-index: -1;
     background-image: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
-    @media(max-width: 1000px) {
+    @media(max-width: 1599px) {
         width: 293px;
     }
-    @media(max-width: 640px) {
+    @media(max-width: 999px) {
         height: 109px;
         width: 100%;
     }
@@ -100,7 +105,12 @@
     }
 }
 
-
+.testimonials__visible-description {
+    @media(max-width: 320px) {
+        overflow: hidden;
+        height: 40px;
+    }
+}
 
 .testimonials__description {
     margin-top: 10px;
@@ -118,7 +128,7 @@
     @media(max-width: 1000px) {
         width: 390px;
     }
-    @media(max-width: 640px) {
+    @media(max-width: 999px) {
         display: none;
     }
 } 
