--- a/online-zoo/assets/styles/layout/testimonials.scss
+++ b/online-zoo/assets/styles/layout/testimonials.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 400px;
     z-index: -1;
-    background: url("../../assets/images/leav.svg") no-repeat 1350px 120px;
+    background: url("../../assets/images/leav.svg") no-repeat calc(100% + 160px) 120px;
     @media(min-width: 1601px) {
         left: calc(50% - 800px);
         width: 1600px;
@@ -17,17 +17,17 @@
         background: url("../../assets/images/1000px/leav_foto-1000px.svg") no-repeat calc(100% + 130px) -30px;
     }
     @media(max-width: 640px) {
-        background: url("../../assets/images/1000px/leav_foto-1000px.svg") calc(100% + 30px) 68px / 203px 203px no-repeat ;
+        background: url("../../assets/images/1000px/leav_foto-1000px.svg") calc(100% + 90px) 68px / 203px 203px no-repeat ;
     }
     @media(max-width: 320px) {
         height: 100px;
-        background: url("../../assets/images/1000px/leav_foto-1000px.svg") calc(100% + 40px) 40px / 94px 94px no-repeat;
+        background: url("../../assets/images/1000px/leav_foto-1000px.svg") calc(100% + 40px) 35px / 94px 94px no-repeat;
     }
 }
 .testimonials__container {
-    padding: 140px 0 180px;
+    padding: 143px 0 180px;
     @media(max-width: 1000px) {
-        padding: 100px 0 140px; 
+        padding: 100px 0 145px; 
     }
     @media(max-width: 640px) {
         padding: 60px 0 80px; 
