--- a/online-zoo/pages/donate/donate.scss
+++ b/online-zoo/pages/donate/donate.scss
@@ -38,3 +38,4 @@ $main-font-family-one: 'Roboto', sans-serif;
 @import '../../assets/styles/components/menu.scss';
 @import '../../assets/styles/components/button.scss';
 @import '../../assets/styles/components/burger-menu.scss';
+@import '../../assets/styles/components/radio.scss';
