--- a/songbird/css/top-panel.css
+++ b/songbird/css/top-panel.css
@@ -34,6 +34,16 @@
   }
 
 }
+@media(max-width: 500px) {
+
+  .questions-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0;
+    border-radius: 10px;
+  }
+
+}
 
 .question-item {
   display: inline-block;
@@ -85,6 +95,13 @@
   }
 
 }
+@media(max-width: 400px) {
+
+  .score {
+    font-size: 12px;
+  }
+  
+}
 
 .top-panel__row {
   display: flex;
@@ -102,6 +119,13 @@
 
   .logo {
     font-size: 18px;
+  }
+  
+}
+@media(max-width: 400px) {
+
+  .logo {
+    font-size: 14px;
   }
   
 }
